<resources>
    <string name="app_name">Maintenance Management</string>
    <string name="facebook_app_id">290213751326479</string>
    <string name="fb_login_protocol_scheme">fb290213751326479</string>
    <string name="title_activity_account_information_base">AccountInformationBaseActivity</string>

    <string name="action_settings">Settings</string>
    <string name="new_request">New Request</string>
    <string name="account_info">Account Info</string>
    <string name="request_status">Request Status</string>
    <string name="new_message">New Message</string>
    <string name="inbox">Inbox</string>
    <string name="home_title">My Home</string>
</resources>
