<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/panel_toolbar"
        layout="@layout/toolbar"/>

    <Button
        android:id="@+id/button_newRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="2"
        android:background="@color/panelButtonColor"
        android:drawableLeft="@drawable/ic_new_request"
        android:paddingEnd="100dp"
        android:paddingStart="100dp"
        android:text="@string/new_request"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button_accountInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_weight="2"
        android:background="@color/panelButtonColor"
        android:drawableLeft="@drawable/ic_account_info"
        android:paddingEnd="100dp"
        android:paddingStart="100dp"
        android:text="@string/account_info"
        android:textColor="@android:color/white" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">

        <Button
            android:id="@+id/button_requestStatus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="2"
            android:background="@color/panelButtonColor"
            android:drawableLeft="@drawable/ic_request_status"
            android:paddingEnd="100dp"
            android:paddingStart="100dp"
            android:text="@string/request_status"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/text_request_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/button_requestStatus"
            android:layout_gravity="right"
            android:layout_marginRight="7dp"
            android:background="@drawable/notification_circle"
            android:elevation="8dp"
            android:gravity="center"
            android:minWidth="25dp"
            android:text="0"
            android:textColor="#FFF"
            android:textSize="13sp" />
    </FrameLayout>

    <Button
        android:id="@+id/button_newMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_weight="2"
        android:background="@color/panelButtonColor"
        android:drawableLeft="@drawable/ic_new_message"
        android:paddingEnd="100dp"
        android:paddingStart="100dp"
        android:text="@string/new_message"
        android:textColor="@android:color/white" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">

        <Button
            android:id="@+id/button_inbox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:allowUndo="true"
            android:background="@color/panelButtonColor"
            android:drawableLeft="@drawable/ic_new_inbox"
            android:paddingEnd="100dp"
            android:paddingStart="100dp"
            android:text="@string/inbox"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/text_inbox_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/button_inbox"
            android:layout_gravity="right"
            android:layout_marginRight="7dp"
            android:background="@drawable/notification_circle"
            android:elevation="8dp"
            android:gravity="center"
            android:minWidth="25dp"
            android:text="0"
            android:textColor="#FFF"
            android:textSize="13sp" />

    </FrameLayout>

</LinearLayout>